--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "rpcUrl": "https://mainnet.helius-rpc.com/?api-key=d9b6d595-1feb-4741-8958-484ad55afdab",
+    "rpcUrl": "https://solana-mainnet.g.alchemy.com/v2/NXnOt7HR3hcJho76kuGrEBEYlZuWIyVM",
     "maxSignatures": 2,
     "lamportsPerSignature": 5000,
     "corsOrigin": true,
